--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
@@ -65,4 +66,9 @@ dependencies {
 
     // check Token
     implementation 'com.auth0.android:jwtdecode:2.0.0'
+
+    implementation 'com.github.bumptech.glide:glide:3.8.0'
+    implementation 'com.afollestad.material-dialogs:core:0.9.4.5'
+    //noinspection GradleCompatible
+    implementation 'com.android.support:support-v4:26.1.0'
 }
